# cli-gen

./: .gitignore  Cargo.toml  README.md  Trunk.toml
crates/backend/: Cargo.toml  build.rs
crates/backend/src/: lib.rs  main.rs
crates/backend/src/codegen/: generators.rs
crates/backend/src/models/: config.rs
crates/backend/static/: index.html
crates/backend/templates/: .gitmodules  Cargo.toml  build.rs  build.sh  cli.rs  config.rs  dispatch.rs  long-help.txt  main.rs  setup.sh  short-help.txt
crates/frontend/: Cargo.toml  index.html
crates/frontend/src/: lib.rs  models.rs
crates/frontend/src/components/: config_form.rs  mod.rs
docs/: ai_agent_instructions.md  architecture.md  design.md  plan.md  prd.md  status.md  sw-cli-integration.md
scripts/: build.sh  serve.sh
