[package]
name = "cli-codegen-frontend"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
yew = { version = "0.21", features = ["csr"] }
yew-router = "0.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "js"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
gloo-net = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
  "console",
  "HtmlSelectElement",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "HtmlButtonElement",
  "EventTarget",
] }